# nicr-scene-analysis-datasets

./: .coveragerc  .gitignore  .gitlab-ci.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
nicr_scene_analysis_datasets/: __init__.py  pytorch.py  version.py
nicr_scene_analysis_datasets/d2/: __init__.py  _auto_init.py  utils.py
nicr_scene_analysis_datasets/dataset_base/: __init__.py  _annotation.py  _base_dataset.py  _class_weighting.py  _concat_dataset.py  _config.py  _depth_dataset.py  _meta.py  _rgb_dataset.py  _rgbd_dataset.py
nicr_scene_analysis_datasets/datasets/cityscapes/: README.md  cityscapes.py  dataset.py  prepare_dataset.py
nicr_scene_analysis_datasets/datasets/coco/: README.md  coco.py  dataset.py  prepare_dataset.py
nicr_scene_analysis_datasets/datasets/hypersim/: README.md  __init__.py  dataset.py  hypersim.py  prepare_dataset.py
nicr_scene_analysis_datasets/datasets/nyuv2/: README.md  dataset.py  nyuv2.py  prepare_dataset.py
nicr_scene_analysis_datasets/datasets/scannet/: README.md  dataset.py  prepare_dataset.py
nicr_scene_analysis_datasets/datasets/scenenetrgbd/: README.md  dataset.py  prepare_dataset.py  scenenetrgbd.py
nicr_scene_analysis_datasets/datasets/sunrgbd/: README.md  dataset.py  match_nyuv2_instances.py  prepare_dataset.py  prepare_instances.py  sunrgbd.py
nicr_scene_analysis_datasets/datasets/sunrgbd/legacy_emsanet_version/: match_nyuv2_instances.py  nyu_additional_class_mapping.json  prepare_dataset.py
nicr_scene_analysis_datasets/mira/: __init__.py  _base_reader.py  _hypersim_reader.py  _scannet_reader.py  utils.py
nicr_scene_analysis_datasets/scripts/: common.py  prepare_labeled_point_clouds.py  viewer_depth.py  viewer_labeled_point_cloud.py
nicr_scene_analysis_datasets/utils/: img.py  io.py  testing.py
requirements/: 3d.txt  base.txt  depth_estimation.txt  embedding_estimation.txt  preparation.txt  test.txt  torch.txt
src/nicr_scene_analysis_datasets/: __init__.py  pytorch.py  version.py
src/nicr_scene_analysis_datasets/auxiliary_data/: __init__.py  _base.py  _config.py  _dataset.py
src/nicr_scene_analysis_datasets/auxiliary_data/depth_estimation/: __init__.py  _base.py  hugging_face.py
src/nicr_scene_analysis_datasets/auxiliary_data/embedding_estimation/: __init__.py  _base.py  alpha_clip.py
src/nicr_scene_analysis_datasets/d2/: _auto_init.py  utils.py
src/nicr_scene_analysis_datasets/dataset_base/: __init__.py  _annotation.py  _base_dataset.py  _class_weighting.py  _config.py  _depth_dataset.py  _rgb_dataset.py
src/nicr_scene_analysis_datasets/datasets/ade20k/: README.md  __init__.py  _class_mappings.py  ade20k.py  dataset.py  prepare_dataset.py
src/nicr_scene_analysis_datasets/datasets/cityscapes/: README.md  cityscapes.py  dataset.py  prepare_dataset.py
src/nicr_scene_analysis_datasets/datasets/coco/: README.md  coco.py  dataset.py  prepare_dataset.py
src/nicr_scene_analysis_datasets/datasets/hypersim/: README.md  dataset.py  hypersim.py  prepare_dataset.py
src/nicr_scene_analysis_datasets/datasets/nyuv2/: README.md  dataset.py  manual_orientations_test.json  manual_orientations_train.json  nyuv2.py  prepare_dataset.py
src/nicr_scene_analysis_datasets/datasets/scannet/: README.md  SensorData.py  dataset.py  prepare_dataset.py  scannet.py  scannet200_constants.py
src/nicr_scene_analysis_datasets/datasets/scenenetrgbd/: README.md  dataset.py  prepare_dataset.py  scenenet_pb2.py  scenenetrgbd.py
src/nicr_scene_analysis_datasets/datasets/sunrgbd/: README.md  dataset.py  match_nyuv2_instances.py  prepare_dataset.py  sunrgbd.py
src/nicr_scene_analysis_datasets/datasets/sunrgbd/legacy_emsanet_version/: match_nyuv2_instances.py  prepare_dataset.py  (+2 more)
src/nicr_scene_analysis_datasets/mira/: __init__.py  _base_reader.py  _hypersim_reader.py  _scannet_reader.py  utils.py
src/nicr_scene_analysis_datasets/scripts/: common.py  generate_auxiliary_data.py  prepare_dataset.py  prepare_labeled_point_clouds.py  viewer_depth.py  viewer_labeled_point_cloud.py  viewer_semantic_instance.py
src/nicr_scene_analysis_datasets/utils/: _colormaps.py  imports.py  io.py  misc.py  rotation.py  testing.py
tests/: compare_dataset_paths.py  conftest.py  test_ade20k.py  test_cityscapes.py  test_coco.py  test_common.py  test_concat.py  test_d2.py  test_datasets.sh  test_depth_estimation.py  test_embedding_estimation.py  test_hypersim.py  test_nyuv2.py  test_pytorch.py  test_scannet.py  test_scenenetrgbd.py  test_sunrgbd.py
